fixed scrollbar color and clened up transition css)

--- a/assets/assets/css/main.css
+++ b/assets/assets/css/main.css
@@ -124,7 +124,8 @@ body {
 }
 
 * {
-  transition: background-color 0.3s, color 0.3s, border-color 0.3s, filter 0.3s;
+  transition: all 0.3s;
+  scrollbar-color: var(--main-extra-color) var(--bg-color);
 }
 
 /* Skip to main link */
